iptables/iptables.rules
# Generated by iptables-save v1.8.7 on Fri Oct 15 04:14:29 2021
*nat
:PREROUTING ACCEPT [15:4020]
:INPUT ACCEPT [1:84]
:OUTPUT ACCEPT [2:134]
:POSTROUTING ACCEPT [2:134]
-A PREROUTING -i ppp0 -p tcp -m tcp --dport 22 -j DNAT --to-destination 192.168.0.5
-A PREROUTING -i ppp0 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 192.168.0.6:80
-A POSTROUTING -s 192.168.0.0/24 -o ppp0 -j MASQUERADE
-A POSTROUTING -s 10.3.0.0/16 -o ppp0 -j MASQUERADE
COMMIT
# Completed on Fri Oct 15 04:14:29 2021
# Generated by iptables-save v1.8.7 on Fri Oct 15 04:14:29 2021
*raw
:PREROUTING ACCEPT [1133:402002]
:OUTPUT ACCEPT [918:121793]
-A PREROUTING -m rpfilter --invert -j DROP
COMMIT
# Completed on Fri Oct 15 04:14:29 2021
# Generated by iptables-save v1.8.7 on Fri Oct 15 04:14:29 2021
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4:303]
:IN_SSH - [0:0]
:LOG_AND_DROP - [0:0]
:TCP - [0:0]
:UDP - [0:0]
:fw-interfaces - [0:0]
:fw-open - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j IN_SSH
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j IN_SSH
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j fw-interfaces
-A FORWARD -j fw-open
-A FORWARD -j REJECT --reject-with icmp-host-unreachable
-A IN_SSH -m recent --rcheck --seconds 10 --hitcount 3 --rttl --name sshbf --mask 255.255.255.255 --rsource -j LOG_AND_DROP
-A IN_SSH -m recent --rcheck --seconds 1800 --hitcount 4 --rttl --name sshbf --mask 255.255.255.255 --rsource -j LOG_AND_DROP
-A IN_SSH -m recent --set --name sshbf --mask 255.255.255.255 --rsource -j ACCEPT
-A LOG_AND_DROP -j LOG --log-prefix "iptables deny: " --log-level 7
-A LOG_AND_DROP -j DROP
-A TCP -p tcp -m tcp --dport 80 -j ACCEPT
-A TCP -p tcp -m tcp --dport 443 -j ACCEPT
-A TCP -p tcp -m tcp --dport 53 -j ACCEPT
-A UDP -p udp -m udp --dport 53 -j ACCEPT
-A fw-interfaces -i eth0 -j ACCEPT
-A fw-interfaces -i wlan0 -j ACCEPT
-A fw-interfaces -i eth1 -j ACCEPT
-A fw-interfaces -i wlan1 -j ACCEPT
-A fw-open -d 192.168.0.5/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A fw-open -d 192.168.0.6/32 -p tcp -m tcp --dport 80 -j ACCEPT
COMMIT
# Completed on Fri Oct 15 04:14:29 2021
